--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         
         <section class="advantages">
           <h2 class="advantages-title">
-            Седона - небольшой городок в Аризоне, заслуживающий большего!
+            Седона — небольшой городок в Аризоне, заслуживающий большего!
           </h2>
           <p class="advantages-text">
             Рассмотрим 5 причин, по которым Седона круче, чем Гранд-Каньон!
@@ -82,10 +82,10 @@
                 Настоящий городок
               </h3>
               <p class="advantages-block-number">
-                - №1 -
+                — №1 —
               </p>
               <p class="advantages-block-description">
-                Седона не аттракцион для туристов, там течет своя жизнь
+                Седона — не аттракцион <br>для туристов, там течёт своя жизнь
               </p>
             </div>
             <img class="advantages-block-image" src="images/city-view.jpg" wight="800" height="384" alt="Вид на город.">
@@ -94,10 +94,10 @@
           <ul class="advantages-list">
             <li class="advantages-item advantages-item-housing">
               <h3 class="advantages-item-title">
-                Жилье
+                Жильё
               </h3>
               <p class="advantages-description">
-                Рекомендуем пожить<br> в настоящем мотеле,<br> все как в кино!
+                Рекомендуем пожить в&nbsp;настоящем мотеле,<br> всё как в кино!
               </p>
             </li>
             <li class="advantages-item advantages-item-food">
@@ -122,10 +122,10 @@
             <img class="advantages-block-image" src="images/mountain-view.jpg" wight="800" height="384" alt="Вид на мост дьявола.">
             <div class="advantages-block-text">
               <h3 class="advantages-block-title">
-                Там есть мост дьявола
+                Там есть <br>мост дьявола
               </h3>
               <p class="advantages-block-number">
-                - №2 -
+                — №2 —
               </p>
               <p class="advantages-block-description">
                 Да, по нему можно пройти! Если вы осмелитесь, разумеется
@@ -139,7 +139,7 @@
                 Небольшая<br>площадь
               </h3>
               <p class="advantages-number">
-                - №3 -
+                — №3 —
               </p>
               <p class="advantages-description">
                 Все достопримечательности находятся очень близко
@@ -150,7 +150,7 @@
                 Красивая<br>дорога
               </h3>
               <p class="advantages-number">
-                - №4 -
+                — №4 —
               </p>
               <p class="advantages-description">
                 Ехать в Седону из Лас-Вегаса совсем не скучно!
@@ -161,7 +161,7 @@
                 Мало<br>туристов
               </h3>
               <p class="advantages-number">
-                - №5 -
+                — №5 —
               </p>
               <p class="advantages-description">
                 Большинство едет в Гранд Каньон и толпится там
@@ -248,7 +248,7 @@
           </h2>
           <address class="contact-address">
             <a class="contacts-phone" href="tel:+78121212">
-              +7 (812) 812-12-12-12
+              +7 (812) 812-12-12
             </a>
           </address> 
         </section>
@@ -269,7 +269,7 @@
       </div>
     </footer>
 
-    <div class="modal-container"> <!-- modal-container-close-->
+    <div class="modal-container modal-container-close"> <!---->
       <div class="modal modal-auth">
         <button class="modal-close-button">
           <span class="visually-hidden">
